--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ before_install:
   - conda update -q conda
   - conda info -a
 install:
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
-  - pip install pyastronomy
-  - python setup.py install
+  # - pip install pyastronomy
+  # - python setup.py install
 
   - pip install pytest-cov python-coveralls codeclimate-test-reporter
   - pip install -r requirements.txt
