--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 
 # command to run tests
 script:
-  - py.test --cov coveralls --cov-report term-missing
+  - pytest --cov=. --cov-report term-missing
   # - py.test --cov=spectrum_overload spectrum_overload/ --cov-report term-missing
   # - pytest --cov=spectrum_overload --cov-report term-missing --durations 5
 
