--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
 # command to run tests
 script:
   - cd sweetercat
-  - pytest --cov=. --cov-report term-missing
+  - pytest --cov=. --cov-report term-missing --durations 5
 
 after_success:
   - coveralls
