Install pytables during build

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_install:
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
+  - conda install -c conda-forge pytables --yes
   # - python setup.py install
   - pip install -r requirements.txt
 
