--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
@@ -29,7 +31,7 @@ install:
   - pip install -r requirements.txt
 
   # Testing requirements
-  - pip install pytest-flask pytest-cov python-coveralls codeclimate-test-reporter
+  - pip install pytest-flask pytest-cov
 
   # Setup PyAstronomy folder
   - echo -n $HOME/PyAData > $HOME/.pyaConfigWhere
@@ -37,9 +39,10 @@ install:
 
 # command to run tests
 script:
+  - ./cc-test-reporter before-build
   - cd sweetercat
   - pytest --cov=. --cov-report term-missing --durations 5
 
 after_success:
-  - coveralls
-  - codeclimate-test-reporter
+  - cd ..
+  - ./cc-test-reporter after-build --exit-code $?
