--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ before_install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
+  # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  # - chmod +x ./cc-test-reporter
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
@@ -31,7 +31,7 @@ install:
   - pip install -r requirements.txt
 
   # Testing requirements
-  - pip install pytest-flask pytest-cov
+  - pip install pytest-flask pytest-cov python-coveralls
 
   # Setup PyAstronomy folder
   - echo -n $HOME/PyAData > $HOME/.pyaConfigWhere
@@ -39,10 +39,11 @@ install:
 
 # command to run tests
 script:
-  - ./cc-test-reporter before-build
+  # - ./cc-test-reporter before-build
   - cd sweetercat
   - pytest --cov=. --cov-report term-missing --durations 5
 
 after_success:
-  - cd ..
-  - ./cc-test-reporter after-build
+  - coveralls
+  # - cd ..
+  # - ./cc-test-reporter after-build
