--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_install:
   # http://conda.pydata.org/docs/travis.html
   - sudo apt-get update
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+      travis_retry wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
     else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+      travis_retry wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -26,12 +26,12 @@ before_install:
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
-  - conda install -c conda-forge pytables --yes
+  - travis_retry conda install -c conda-forge pytables --yes
   # - python setup.py install
-  - pip install -r requirements.txt
+  - travis_retry pip install -r requirements.txt
 
   # Testing requirements
-  - pip install -r test_requirements.txt
+  - travis_retry pip install -r test_requirements.txt
 
   # Setup PyAstronomy folder
   - echo -n $HOME/PyAData > $HOME/.pyaConfigWhere
@@ -41,9 +41,9 @@ before_script:
   # - ./cc-test-reporter before-build
   # Pre-download the PyAData.
   - python -c "from PyAstronomy.pyasl import ExoplanetEU2; ExoplanetEU2()"
+  - cd sweetercat
 
 script:
-  - cd sweetercat
   - pytest --cov=. --cov-report term-missing --durations 5 -n 2
 
 after_success:
