--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,11 @@ install:
   - echo -n $HOME/PyAData > $HOME/.pyaConfigWhere
   - mkdir $HOME/PyAData
 
+  # Remove futures for python 3
+  - if [[ "$TRAVIS_PYTHON_VERSION" == 3* ]]; then
+      travis_retry pip uninstall futures;
+    fi
+
 before_script:
   # - ./cc-test-reporter before-build
   # Pre-download the PyAData.
