--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
   - pip install -r requirements.txt
 
   # Testing requirements
-  - pip install pytest-flask pytest-cov python-coveralls
+  - pip install pytest-flask pytest-cov python-coveralls codacy-coverage
 
   # Setup PyAstronomy folder
   - echo -n $HOME/PyAData > $HOME/.pyaConfigWhere
@@ -45,5 +45,7 @@ script:
 
 after_success:
   - coveralls -i
+  - coverage xml -i
+  - python-codacy-coverage -r coverage.xml
   # - cd ..
   # - ./cc-test-reporter after-build
