--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_script:
   - cd sweetercat
 
 script:
-  - pytest --cov=. --cov-report term-missing --durations 5 -n 2
+  - pytest --cov=. --cov-report term-missing --durations 5
 
 after_success:
   - coveralls -i
