--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,11 @@ before_install:
   - conda update -q conda
   - conda info -a
 
+  # https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-xvfb-to-Run-Tests-That-Require-a-GUI
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"  # xvfb = Virtual frame buffer
+  - sleep 3                         # give xvfb some time to start
+
 install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
