--- a/.pyup.yml
+++ b/.pyup.yml
@@ -10,7 +10,7 @@ pin: True
 
 # set the default branch
 # default: empty, the default branch on GitHub
-branch: mpld3
+branch: master
 
 # update schedule
 # default: empty
