--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ pandas==0.23.1
 scipy==1.1.0
 astropy==3.0.3
 matplotlib==2.0.2
-mpld3==0.3
+git+https://github.com/javadba/mpld3@display_fix
 tables==3.4.4
 apscheduler==3.5.1
 PyAstronomy==0.12
