--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ pandas==0.23.4
 scipy==1.1.0
 astropy==3.0.4
 matplotlib==2.2.3
-git+https://github.com/javadba/mpld3@display_fix
+git+https://github.com/mpld3/mpld3@master
 tables==3.4.4
 apscheduler==3.5.3
 PyAstronomy==0.13.0
