--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Jinja2==2.10
 MarkupSafe==1.1.1
 numpy==1.16.2
 python-dateutil==2.8.0
-PyYAML==3.13
+pyyaml>=4.2b1
 requests>=2.20.0
 singledispatch==3.4.0.3
 six==1.12.0
