--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ click==7.0
 Flask==1.0.2
 idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.1.1
 numpy==1.16.2
 python-dateutil==2.8.0
@@ -17,7 +17,7 @@ requests>=2.20.0
 singledispatch==3.4.0.3
 six==1.12.0
 tornado==6.0.2
-urllib3==1.24.1
+urllib3>=1.24.2
 Werkzeug==0.15.1
 pandas==0.24.2
 scipy==1.2.1
