--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,9 @@ python:
   - "3.5"
   - "3.6"
 
-before_install:
-    # https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-xvfb-to-Run-Tests-That-Require-a-GUI
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"  # xvfb = Virtual frame buffer
-  - sleep 3                         # give xvfb some time to start
+dist: xenial
+services:
+  - xvfb
 
 cache:
   directories:
