--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ singledispatch==3.4.0.3
 six==1.15.0
 tornado==6.1
 urllib3>=1.24.2
-Werkzeug==1.0.1
+cachelib==0.1.1
 pandas==1.1.4
 scipy==1.5.4
 astropy==4.2
